--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,14 +14,15 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    composeOptions {
-        kotlinCompilerVersion "1.3.70-dev-withExperimentalGoogleExtensions-20200424"
-        kotlinCompilerExtensionVersion = "${Versions.compose}"
-    }
-
     buildFeatures {
         compose true
     }
+
+    composeOptions {
+        kotlinCompilerVersion "1.4.0"
+        kotlinCompilerExtensionVersion "0.1.0-dev17"
+    }
+
 
     buildTypes {
         release {
@@ -30,9 +31,6 @@ android {
         }
     }
 
-    compileOptions {
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
     }
@@ -42,27 +40,31 @@ android {
     }
 }
 
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "1.8"
+        freeCompilerArgs += ["-Xallow-jvm-ir-dependencies", "-Xskip-prerelease-check"]
+    }
+}
+
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:${Versions.kotlin}"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
 
-    implementation "androidx.ui:ui-core:${Versions.compose}"
-    implementation "androidx.ui:ui-layout:${Versions.compose}"
-    implementation "androidx.ui:ui-material:${Versions.compose}"
-    implementation "androidx.ui:ui-tooling:${Versions.compose}"
-    implementation "androidx.ui:ui-graphics:${Versions.compose}"
-    implementation "androidx.ui:ui-livedata:${Versions.compose}"
 
+    implementation 'com.google.android.material:material:1.2.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
+    implementation(Compose.ui)
+    implementation(Compose.uiGraphics)
+    implementation(Compose.uiTooling)
+    implementation(Compose.foundationLayout)
+    implementation(Compose.material)
+    implementation(Compose.runtimeLiveData)
     implementation "dev.chrisbanes.accompanist:accompanist-coil:${Versions.coilVersion}"
 
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
-
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
     implementation Koin.core
     implementation Koin.android
