--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:4.2.0-alpha05")
-        classpath(kotlin("gradle-plugin", version = Versions.kotlin))
-        classpath(kotlin("serialization", version = Versions.kotlin))
+        classpath("com.android.tools.build:gradle:4.2.0-alpha08")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}")
+        classpath("org.jetbrains.kotlin:kotlin-serialization:${Versions.kotlin}")
         classpath("com.squareup.sqldelight:gradle-plugin:${Versions.sqlDelight}")
         //classpath("com.juliozynger.floorplan:floorplan-gradle-plugin:${Versions.floorPlan}")
     }
@@ -20,8 +20,9 @@ allprojects {
         google()
         mavenCentral()
         jcenter()
-        maven( "https://dl.bintray.com/ekito/koin")
-        maven("https://kotlin.bintray.com/kotlin-js-wrappers/")
+        maven { url = "https://dl.bintray.com/ekito/koin" }
+        maven { url = "https://kotlin.bintray.com/kotlin-js-wrappers/" }
+        maven { url = "https://dl.bintray.com/touchlabpublic/kotlin" }
     }
 }
 
